@@ -1,12 +1,12 @@
-4eecfc045335ee77d9767c142bfa5391 *ChangeLog
-358cea014352378dd0ae57e7f92f793f *DESCRIPTION
+caa9c4e0e452a7082d20445b68f21b6f *ChangeLog
+00b45553e7c4ec5e72df19753f45986e *DESCRIPTION
 dbf3deff2b37ce65aa660841a08fab1f *LICENSE
 7922b1c532e9c27eb65a8908a5deb089 *NAMESPACE
-365eddee1394898060546f010165deaf *R/theme.R
-d3e8447007b07e899e464c2c78e60e91 *README.md
-77c4d14bebc2aa444ac943eb1993c66e *build/partial.rdb
+2a3702002b74454dae184ee8cb6da884 *R/theme.R
+29ad3e95368aaae4f8b02d7c1b091a96 *README.md
+8dc2b0d49eeb8b8a13a24484c150e357 *build/partial.rdb
 ee02f0f34f58cc1c375905508d250e25 *demo/00Index
 4445d1435f5b4970bd12f7f80da570ba *demo/theme.R
-afe9831dbc1f71b88e04ca767af5b13c *inst/NEWS.Rd
-5ab4f48d1d09496b4962eb2363f3c35b *man/theme_ipsum_rc.Rd
+15ed0183321aa56605d91b861e8c97c0 *inst/NEWS.Rd
+d881d555ca7e6275b9742ea1d6848dc4 *man/theme_ipsum_rc.Rd
 64144d40285ba8aab51b0b3a071a16fc *man/tinythemes-package.Rd
