@@ -1,3 +1,14 @@
+2025-03-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.0.3
+
+	* R/theme.R: Use proper anchors; rewrote example without '|>'
+	* man/theme_ipsum_rc.Rd: Regenerated
+
+2024-05-31  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Use tinyverse.netlify.app for dependency badge
+
 2024-03-04  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.2
